<resources>
    <string name="app_name">NewsTrack</string>
    <string name="topheadline_sources">Topheadline Sources</string>
    <string name="dummy_error_msg">Error occurred</string>
    <string name="home_text">Home</string>
    <string name="top_headlines_text">Topheadline Sources</string>
    <string name="pagination_topheadline_sources">Pagination Topheadline sources</string>
    <string name="offline_topheadlines_sources_text">Offline Topheadline Sources</string>
    <string name="news_categories">News Categories</string>
    <string name="country_selection_text">Country Selection</string>
    <string name="language_selection_text">Language Selection</string>
    <string name="search_text">Search</string>
    <string name="dummy_news_title">ABC News (AU)</string>
    <string name="dummy_news_description">Australia\'s most trusted source of local, national and world news. Comprehensive, independent, in-depth analysis, the latest business, sport, weather and more.</string>
    <string name="dummy_category_value">general</string>
    <string name="dummy_country_value">India</string>
    <string name="dummy_language_value">English</string>
    <string name="category">Category : </string>
    <string name="country">Country : </string>
    <string name="language">Language : </string>
    <string name="category_news_empty_display_text">Looks like there’s no news in this category right now. Check again later for more updates!</string>
    <string name="category_news">Category News</string>
    <string name="news_categories_headline">%s News</string>
    <string name="country_news">Country News</string>
    <string name="country_news_empty_display_text">No current news for this country. Come back for more updates!</string>
    <string name="news_countries_headline">%s News Update</string>
    <string name="news_languages_headline">Latest News in %s</string>
    <string name="language_news_empty_display_text">No news available in %s at the moment. Please check back later!</string>
    <string name="dummy_languages_news_headline">Latest News in English</string>
    <string name="language_text">Language</string>
    <string name="sort_by_text">Sort By</string>
    <string name="author_dummy_value">Jennifer Pattison Tuohy</string>
    <string name="filter_text">Filter</string>
    <string name="arabic">Arabic</string>
    <string name="german">German</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="french">French</string>
    <string name="hebrew">Hebrew</string>
    <string name="italian">Italian</string>
    <string name="dutch">Dutch</string>
    <string name="norwegian">Norwegian</string>
    <string name="portuguese">Portuguese</string>
    <string name="russian">Russian</string>
    <string name="swedish">Swedish</string>
    <string name="urdu">Urdu</string>
    <string name="chinese">Chinese</string>
    <string name="relevancy">Relevancy</string>
    <string name="popularity">Popularity</string>
    <string name="published_at">Published At</string>
    <string name="apply_filters_text">Apply Filters</string>
    <string name="removed_text">[Removed]</string>
    <string name="add_filter">Add Filter</string>
    <string name="search_news_title">Explore News</string>
    <string name="author">Author : </string>
    <string name="data_text">Data</string>
    <string name="news_image">News Image</string>
    <string name="back_button_text">Back Button</string>
    <string name="loading">Loading</string>
    <string name="category_text">category</string>
    <string name="country_text">country</string>
    <string name="language_name">language</string>
    <string name="languages_text">Languages</string>
    <string name="sortby_text">SortBy</string>
    <string name="search_news_hint_text">Search News...</string>
    <string name="clear_icon_text">Clear Icon</string>
    <string name="search_icon_text">Search Icon</string>
    <string name="default_text">default</string>
    <string name="show_filters_text">Show filters</string>
    <string name="reset_filter_text">Reset Filter</string>
    <string name="no_results_found_text">No results found</string>
    <string name="published_at_text">Published At :</string>
    <string name="content_text">Content : </string>
    <string name="author_text">Author :</string>
    <string name="query">query</string>
    <string name="filters">filters</string>
</resources>