<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/filter_background_drawable"
    android:paddingStart="5dp"
    android:paddingTop="6dp"
    android:paddingEnd="5dp"
    android:paddingBottom="10dp">

    <TextView
        android:id="@+id/filterTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center_horizontal"
        android:text="@string/filter_text"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/filtersLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.70"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filterTitle">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/firstLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toStartOf="@id/secondLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.40">

            <ProgressBar
                android:id="@+id/progressBarFilter"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="10dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/filterRecyclerView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/secondLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/firstLayout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.60">

            <RadioGroup
                android:id="@+id/radioGroupLanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="vertical"
                android:padding="1dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RadioButton
                    android:id="@+id/arabic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:tag="ar"
                    android:text="@string/arabic"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <RadioButton
                    android:id="@+id/german"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:tag="de"
                    android:text="@string/german"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <RadioButton
                    android:id="@+id/english"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:tag="en"
                    android:text="@string/english"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <RadioButton
                    android:id="@+id/spanish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:tag="es"
                    android:text="@string/spanish"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <RadioButton
                    android:id="@+id/french"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:tag="fr"
                    android:text="@string/french"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <RadioButton
                    android:id="@+id/hebrew"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:tag="he"
                    android:text="@string/hebrew"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <RadioButton
                    android:id="@+id/italian"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:tag="it"
                    android:text="@string/italian"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <RadioButton
                    android:id="@+id/dutch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:tag="nl"
                    android:text="@string/dutch"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <RadioButton
                    android:id="@+id/norwegian"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:tag="no"
                    android:text="@string/norwegian"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <RadioButton
                    android:id="@+id/portuguese"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:tag="pt"
                    android:text="@string/portuguese"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <RadioButton
                    android:id="@+id/russian"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:tag="ru"
                    android:text="@string/russian"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <RadioButton
                    android:id="@+id/swedish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:tag="sv"
                    android:text="@string/swedish"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <RadioButton
                    android:id="@+id/urdu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:tag="ud"
                    android:text="@string/urdu"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <RadioButton
                    android:id="@+id/chinese"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:tag="zh"
                    android:text="@string/chinese"
                    android:textSize="16sp"
                    android:textStyle="normal" />
            </RadioGroup>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/sortByLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RadioGroup
                    android:id="@+id/radioGroupSortBy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical"
                    android:padding="1dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <RadioButton
                        android:id="@+id/rbRelevancy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:tag="relevancy"
                        android:text="@string/relevancy"
                        android:textSize="16sp"
                        android:textStyle="normal" />

                    <RadioButton
                        android:id="@+id/rbPopularity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:tag="popularity"
                        android:text="@string/popularity"
                        android:textSize="16sp"
                        android:textStyle="normal" />

                    <RadioButton
                        android:id="@+id/rbPublishedAt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:tag="publishedAt"
                        android:text="@string/published_at"
                        android:textSize="16sp"
                        android:textStyle="normal" />

                </RadioGroup>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/applyFilterButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_drawable"
        android:fontFamily="sans-serif-black"
        android:paddingBottom="5dp"
        android:text="@string/apply_filters_text"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filtersLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>

